Make Vite Peer Dependency

--- a/packages/vitest-preview/package.json
+++ b/packages/vitest-preview/package.json
@@ -46,8 +46,7 @@
     "@types/express": "^4.17.14",
     "@vitest-preview/dev-utils": "workspace:*",
     "@types/node": "^18.11.3",
-    "express": "^4.18.2",
-    "vite": "^3.0.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^23.0.2",
@@ -55,7 +54,8 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "rollup": "^3.2.3",
     "rollup-plugin-dts": "^5.0.0",
-    "rollup-plugin-esbuild": "^4.10.1"
+    "rollup-plugin-esbuild": "^4.10.1",
+    "vite": "^3.0.0"
   },
   "peerDependencies": {}
 }
